# src/main/kotlin/edu/itmo/ultimatumgame/dto/requests/RefreshTokenRequest.kt
@@ -1,0 +1,8 @@
+package edu.itmo.ultimatumgame.dto.requests
+
+import jakarta.validation.constraints.NotBlank
+
+data class RefreshTokenRequest(
+    @field:NotBlank
+    val refreshToken: String,
+)
